# tex_para_o_impaciente

./: FILES.txt  README.md  direitosautorais.tex  estrutura_e_ordem_inclusao_arquivos.txt  leiaprimeiro.tex  macros.tex  paginasprecedentes.tex  prefacio.tex  secao_001-uselivro.tex  secao_002-usandotex.tex  secao_003-exemplos.tex  tex_para_o_impaciente.tex  usandotex.tex  uselivro.tex
tex_for_the_impatient-orig/: .cvsignore  Makefile  Makefile.in  NEWS  README  book.aux  book.ccs  book.idx  book.sdx  book.toc  concepts.tex  config.status  configure  configure.ac  copyrght.tex  eplain.tex  errata.future  fdl.tex  macros.tex  math.tex  paras.tex  tips.tex  usermacs.tex  xmptext.tex
tex_for_the_impatient-orig/artwork/: .cvsignore  README
tex_for_the_impatient-orig/autom4te.cache/: output.0  requests  traces.0
tex_for_the_impatient-orig/fr/: corrections.future  fbook.aux  fbook.ccs  fbook.dvi  fbook.idx  fbook.sdx  fbook.toc  findex.tex
